# cryptoquant-rust

./: .gitignore  Cargo.toml  config.yaml
.github/workflows/: pr_agent.yml
src/: main.rs  test_utils.rs
src/data/: binance_history.rs  db.rs  mod.rs
src/data/binance/: binance_history.rs  data_types.rs  downloader.rs  file.rs  file_collection.rs  mod.rs  pair.rs  s3.rs
src/data/db/: mod.rs  trades.rs  trades_index_log.rs  utils.rs
src/utils/: config.rs
