[package]
name = "cryptoquant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
casey = "0.4.0"
env_logger = "0.11.3"
log = "0.4.22"
rust-s3 = "0.34.0" 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sha2 = "0.10.8"
shellexpand = "3.1.0"
tokio = { version = "1", features = ["full"] }
