[package]
name = "cryptoquant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async_zip = { version = "0.0.17", features = ["full"] }
casey = "0.4.0"
chrono = "0.4.38"
clickhouse = { version = "0.12.1", features = ["inserter"] }
csv-async = { version = "1.3.0", features = ["with_serde", "tokio"]}
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.22"
rust-s3 = "0.34.0" 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sha2 = "0.10.8"
shellexpand = "3.1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"

[dev-dependencies]
clickhouse = { version = "0.12.1", features = ["test-util"] }
